[package]
name = "sorting-visualizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console-error-panic-hook"]

[dependencies.console-error-panic-hook]
version = "0.1.6"
optional = true